fix(orb-ui): #1502 Align policy names at the left of table row

--- a/ui/src/app/pages/datasets/policies.agent/list/agent.policy.list.component.scss
+++ b/ui/src/app/pages/datasets/policies.agent/list/agent.policy.list.component.scss
@@ -146,6 +146,7 @@ tr div p {
   outline: none !important;
   overflow: hidden !important;
   color: #ffffff;
+  text-align: left;
 }
 
 .add-agent-policy-container {
